# pure-internship

./: .gitignore  README.md  VAE Code.ipynb  important links.md  procrustes test.ipynb
TF Outputs/Learn TensorFlow/: oracle.json
VAE_Stability_Testing/docs/: metrics.md  vae_subsample_sweep.md
VAE_Stability_Testing/scripts/: compare_sweeps.py  compare_sweeps.sh  compare_sweeps_vs_52M.py  epoch_sweep_vs_52M.py  plot_rq_sweep.py  plot_seed_density.py  read_parquet_example.py  rq_sweep_vs_52M.py  run_compare_sweeps.sh  run_epoch_sweep.sh  run_epoch_sweep_large.sh  run_epoch_vs_52M.sh  run_rq_sweep.sh  run_rq_vs_52M.sh  run_seed67_26M.sh  run_seed_density_sweep.sh  run_seed_density_vs_52M.sh  run_seed_vs_52M.sh  (+11 more)
learning_and_testing/: Learn TensorFlow.ipynb  VAE_Code.py  Variational_AutoEncoders.ipynb  cuml test.py  hdbscan cuda.py
uv_vae/: .gitignore  Pipeline Preprocessing and Training Flow.md  README.md  VAE Stability test.md  batch_size_guide.md  main.py  ml_features.json  pyproject.toml  train.py
uv_vae/scripts/: combine_parquets.py  export_clustered_vcf.py  export_vcf.sh  plot_trinuc96_snvq_histograms.py  read_parquet_example.py  run.sh  run_full_pipeline.sh  run_model_training_pipeline.py  run_pipeline_to_vae.py  run_train_only.sh  run_train_only_dropout0.2.sh  run_train_then_cluster.sh  run_variant_cluster_pipeline.py  train_with_early_stopping.py  vae_subsample_sweep.py
uv_vae/uv_vae/: cli.py  convergence.py  data.py  early_stopping.py  evaluation.py  features.py  inference.py  model.py  pipeline_vae.py  preprocess.py  streaming.py  train_cli.py  training.py
(+104 files in other folders)
