[project]
name = "uv-vae"
version = "0.1.0"
description = "Train a tabular VAE on sampled parquet feature maps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "hdbscan>=0.8.42",
    "matplotlib>=3.10.8",
    "numpy",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "polars",
    "pyarrow",
    "pyyaml",
    "sigprofilerassignment>=1.1.3",
    "torch",
    "tqdm",
    "umap-learn>=0.5.12",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
